<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="4dp"
    android:paddingVertical="20dp"
    android:paddingHorizontal="16dp"
    android:background="@drawable/bg_gradient_screen">

    <View
        android:id="@+id/category_dark_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/edit_password_back_iv"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:padding="3dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/edit_password_content_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="12dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password_back_iv"
        app:layout_constraintBottom_toTopOf="@id/edit_password_save_btn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/edit_password_back_iv"
            app:layout_constraintTop_toBottomOf="@id/edit_password_back_iv">

            <TextView
                android:id="@+id/edit_password_user_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_password_user_name_tv"
                android:textColor="@color/dark_gray"
                android:textStyle="normal"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/edit_password_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="비밀번호 변경"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/edit_password_desc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/edit_password_desc_tv"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/edit_password_guide_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/edit_password_guide_tv"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/edit_password_current_pwd_et"
                android:layout_marginTop="24dp"
                android:hint="@string/current_password"
                style="@style/edit_password_et" />

            <EditText
                android:id="@+id/edit_password_new_pwd_et"
                android:hint="@string/new_password"
                style="@style/edit_password_et" />

            <EditText
                android:id="@+id/edit_password_new_pwd_repeat_et"
                android:hint="@string/new_password_check"
                style="@style/edit_password_et" />

            <TextView
                android:id="@+id/edit_password_forget_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/forget_password"
                android:textColor="@color/activate_blue"
                android:textSize="17sp"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/edit_password_save_btn"
        android:text="비밀번호 변경"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1"
        style="@style/default_round_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>