<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient_screen">

    <TextView
        android:id="@+id/login_language_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="한국어"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_logo_transparent"
        app:layout_constraintTop_toBottomOf="@id/login_language_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_enter_ll"
        app:layout_constraintVertical_bias="0.4"/>

    <LinearLayout
        android:id="@+id/login_enter_ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/login_user_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_user_name_hint"
            style="@style/edit_password_et"/>

        <EditText
            android:id="@+id/login_pwd_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/edit_password_et"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/login"
            android:backgroundTint="@color/activate_blue"
            style="@style/default_round_btn"/>

    </LinearLayout>

    <TextView
        android:id="@+id/login_forget_pwd_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="5dp"
        android:text="@string/forget_password"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/login_enter_ll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:paddingVertical="4dp"
        android:text="@string/make_new_account"
        android:textSize="16sp"
        android:textColor="@color/activate_blue"
        android:background="@drawable/bg_border_blue_btn"
        app:layout_constraintBottom_toTopOf="@id/login_meta_logo_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/login_meta_logo_iv"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_logo_meta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="910:274"/>

</androidx.constraintlayout.widget.ConstraintLayout>